[tool.poetry]
name = "nonebot-plugin-help"
version = "0.2.0"
description = "A general help lister for nonebot2 plugins"
authors = ["XZhouQD <X.Zhou.QD@hotmail.com>"]
license = "AGPL v3"
readme = "README.md"
homepage = "https://github.com/XZhouQD/nonebot-plugin-help"
repository = "https://github.com/XZhouQD/nonebot-plugin-help"
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.7.3"
nonebot2 = "^2.0.0-beta.1"
nonebot-adapter-onebot = "^2.0.0-beta.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
